--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,5 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+Pedro Olatunde Gafar <Pedroolatunde@yahoo.com>
+Glen Michael glen 
